fix: 존재하지 않는 align 속성 삭제

--- a/src/asset/css/Register.css
+++ b/src/asset/css/Register.css
@@ -1,111 +1,111 @@
 .register-banner {
-    height: 90rem !important;
+  height: 90rem !important;
 }
 
 .register-main {
-    background-color: #FFFFFF;
-    width: 40rem;
-    height: auto;
-    margin: auto;
-    border-radius: 1.5em;
-    padding-top: 4.5rem;
-    padding-bottom: 4rem;
-    box-shadow: 0 1.1rem 3.5rem 0.2rem rgba(0, 0, 0, 0.14);
+  background-color: #ffffff;
+  width: 40rem;
+  height: auto;
+  margin: auto;
+  border-radius: 1.5em;
+  padding-top: 4.5rem;
+  padding-bottom: 4rem;
+  box-shadow: 0 1.1rem 3.5rem 0.2rem rgba(0, 0, 0, 0.14);
+  text-align: center;
 }
 
 .register-header {
-    padding-top: 1rem;
-    color: #8C55AA;
-    font-weight: bold;
-    font-size: 2.8rem;
+  padding-top: 1rem;
+  color: #8c55aa;
+  font-weight: bold;
+  font-size: 2.8rem;
 }
 
 .register-err {
-    color: orangered;
-    font-size: 1.4rem;
+  color: orangered;
+  font-size: 1.4rem;
 }
 
 .register-input {
-    display: block;
-    width: 76%;
-    color: rgb(38, 50, 56);
-    font-weight: 700;
-    font-size: 1.4rem;
-    letter-spacing: 0.1rem;
-    background: rgba(136, 126, 126, 0.04);
-    padding: 1rem 2rem;
-    border: none;
-    border-radius: 2rem;
-    outline: none;
-    box-sizing: border-box;
-    border: 0.2rem solid rgba(0, 0, 0, 0.02);
-    margin: 2rem auto 0 auto;
-    text-align: center;
+  display: block;
+  width: 76%;
+  color: rgb(38, 50, 56);
+  font-weight: 700;
+  font-size: 1.4rem;
+  letter-spacing: 0.1rem;
+  background: rgba(136, 126, 126, 0.04);
+  padding: 1rem 2rem;
+  border: none;
+  border-radius: 2rem;
+  outline: none;
+  box-sizing: border-box;
+  border: 0.2rem solid rgba(0, 0, 0, 0.02);
+  margin: 2rem auto 0 auto;
+  text-align: center;
 }
 
 .register-form {
-    padding-top: 2rem;
+  padding-top: 2rem;
 }
 
-.register-un:focus, .register-pass:focus {
-    border: 0.2rem solid rgba(0, 0, 0, 0.18) !important;
+.register-un:focus,
+.register-pass:focus {
+  border: 0.2rem solid rgba(0, 0, 0, 0.18) !important;
 }
 
 .register-btn {
-    cursor: pointer;
-    display: block;
-    width: 40%;
-    color: white;
-    background-color: #007bff;
-    font-size: 1.2rem;
-    letter-spacing: 0.1rem;
-    padding: 0.5rem 2rem;
-    border: none;
-    border-radius: 2rem;
-    outline: none;
-    box-sizing: border-box;
-    border: 0.2rem solid rgba(0, 0, 0, 0.02);
-    margin: 2rem auto 1rem auto;
-    text-align: center;
+  cursor: pointer;
+  display: block;
+  width: 40%;
+  color: white;
+  background-color: #007bff;
+  font-size: 1.2rem;
+  letter-spacing: 0.1rem;
+  padding: 0.5rem 2rem;
+  border: none;
+  border-radius: 2rem;
+  outline: none;
+  box-sizing: border-box;
+  border: 0.2rem solid rgba(0, 0, 0, 0.02);
+  margin: 2rem auto 1rem auto;
+  text-align: center;
 }
 
 .register-submit {
-    cursor: pointer;
-    border-radius: 5em;
-    color: #fff;
-    background: linear-gradient(to right, #9C27B0, #E040FB);
-    border: 0;
-    padding: 1rem 4rem;
-    margin-left: 35%;
-    font-size: 1.3rem;
-    box-shadow: 0 0 2rem 0.1rem rgba(0, 0, 0, 0.04);
+  cursor: pointer;
+  border-radius: 5em;
+  color: #fff;
+  background: linear-gradient(to right, #9c27b0, #e040fb);
+  border: 0;
+  padding: 1rem 4rem;
+  margin-left: 35%;
+  font-size: 1.3rem;
+  box-shadow: 0 0 2rem 0.1rem rgba(0, 0, 0, 0.04);
 }
 
 .register-oauth {
-    background-color: #34495e;
+  background-color: #34495e;
 }
 
 .register-register {
-    background-color: #2DB400;
+  background-color: #2db400;
 }
 
-@media screen and (min-width:768px) and (max-width: 1200px) {
-
+@media screen and (min-width: 768px) and (max-width: 1200px) {
 }
 
-@media screen and (max-width:767px) {
-
+@media screen and (max-width: 767px) {
 }
 
-@media screen and (max-width:500px){
-    .register-main {
-        width: 95%;
-    }
+@media screen and (max-width: 500px) {
+  .register-main {
+    width: 95%;
+  }
 }
 
-@media screen and (max-width:450px){
-    .register-err {
-        color: orangered;
-        font-size: 1.1rem;
-    }
+@media screen and (max-width: 450px) {
+  .register-err {
+    color: orangered;
+    font-size: 1.1rem;
+  }
 }
